[package]
name = "caplog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capstone = { git = "https://github.com/Fundament-Software/capstone-rs" }
capstone-futures = { git = "https://github.com/Fundament-Software/capstone-rs" }
capstone-import = { git = "https://github.com/Fundament-Software/capstone-rs" }
capstone-rpc = { git = "https://github.com/Fundament-Software/capstone-rs" }
capstone-macros = { git = "https://github.com/Fundament-Software/capstone-rs" }
color-eyre = "0.6"
eyre = "0.6"
tokio = { version = "1.18", features = ["rt"] }
thiserror = "1.0"
bitfield-struct = "0.5"
memmap2 = "0.7.1"
num = { version = "0.4.1", features = ["std"] }
# quicklz = "0.3"
rand = "0.8.5"
tempfile = "3"

[dev-dependencies]
murmur3 = "0.5.1"
rand = "0.8.5"
tempfile = "3"
futures = "0.3.30"
cargo-husky = { version = "1.5.0", features = ["run-cargo-fmt"] }
