[package]
name = "caplog"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capstone = { git = "https://github.com/Fundament-Software/capstone-rs" }
capstone-futures = { git = "https://github.com/Fundament-Software/capstone-rs" }
capstone-rpc = { git = "https://github.com/Fundament-Software/capstone-rs" }
capstone-macros = { git = "https://github.com/Fundament-Software/capstone-rs" }
color-eyre = "0.6"
eyre = "0.6"
thiserror = "2.0"
bitfield-struct = "0.11"
memmap2 = "0.9"
num = { version = "0.4.1", features = ["std"] }
# quicklz = "0.3"
rand = "0.9"
tempfile = "3"

[build-dependencies]
capstone-gen = { git = "https://github.com/Fundament-Software/capstone-rs" }

[dev-dependencies]
murmur3 = "0.5.1"
rand = "0.9"
tempfile = "3"
futures = "0.3.30"
cargo-husky = { version = "1.5.0", features = ["run-cargo-fmt"] }
